fixed uniqul background alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ section {
         background-image: url(../images/UniQol.png);
         display: flex;
         flex-direction: column;
-        align-content: center;
+        background-position: center;        
         width: 400px;
         height: 400px;
         border: var(--third-color) solid 5px;
